--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,22 @@
   "version": "1.0.0",
   "description": "Media uploader application",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "build": "webpack --config webpack.config.js",
     "start": "npm run build && electron ./dist/main.js"
   },
   "author": "team-itp",
   "license": "MIT",
   "devDependencies": {
+    "@types/electron": "^1.6.10",
+    "@types/node": "^9.6.2",
     "electron": "^1.8.4",
+    "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^4.1.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.1"
+    "tslint-config-standard": "^7.0.0",
+    "tslint-loader": "^3.6.0",
+    "typescript": "^2.8.1",
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13"
   }
 }
