--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,16 @@
   },
   "author": "team-itp",
   "license": "MIT",
+  "dependencies": {
+    "vue": "^2.5.16",
+    "vue-class-component": "^6.0.0",
+    "vue-property-decorator": "^6.0.0",
+    "vue-router": "^3.0.1"
+  },
   "devDependencies": {
     "@types/electron": "^1.6.10",
     "@types/node": "^9.6.2",
+    "css-loader": "^0.28.11",
     "electron": "^1.8.4",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^4.1.0",
@@ -18,6 +25,8 @@
     "tslint-config-standard": "^7.0.0",
     "tslint-loader": "^3.6.0",
     "typescript": "^2.8.1",
+    "vue-loader": "^14.2.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13"
   }
