--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,6 +11,7 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "skipLibCheck": true,
-    "allowJs": true
+    "allowJs": true,
+    "experimentalDecorators": true
   }
 }
