--- a/client/package.json
+++ b/client/package.json
@@ -1,23 +1,35 @@
 {
   "name": "cms-proto",
   "version": "1.0.0",
-  "description": "documnt management system",
-  "main": "index.js",
+  "description": "Media uploader application",
+  "author": "team-itp",
   "license": "MIT",
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "prestart": "yarn run build",
-    "start": "electron ./dist/main.js"
+    "start": "electron ./dist/main.js",
+    "test": "karma start"
   },
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
+    "@types/electron": "^1.6.10",
+    "@types/jasmine": "^2.8.6",
+    "@types/node": "^9.6.6",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
     "electron": "^1.8.4",
     "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.1.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.2",
+    "karma-jasmine": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^3.0.0",
+    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.16",
     "ts-loader": "^4.2.0",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
