--- a/client/package.json
+++ b/client/package.json
@@ -8,18 +8,22 @@
     "build": "webpack --config webpack.config.js",
     "prestart": "yarn run build",
     "start": "electron ./dist/main.js",
-    "test": "karma start"
+    "test": "karma start",
+    "watch": "yarn run build && electron ./dist/main.js"
   },
   "dependencies": {
+    "flux": "^3.1.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
+    "@types/flux": "^3.1.7",
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.6.6",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
+    "awesome-typescript-loader": "^5.0.0",
     "electron": "^1.8.4",
     "html-webpack-plugin": "^3.2.0",
     "jasmine": "^3.1.0",
@@ -30,7 +34,7 @@
     "karma-webpack": "^3.0.0",
     "phantomjs": "^2.1.7",
     "phantomjs-prebuilt": "^2.1.16",
-    "ts-loader": "^4.2.0",
+    "source-map-loader": "^0.2.3",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "tslint-loader": "^3.6.0",
