--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "prestart": "yarn run build",
     "start": "electron ./dist/main.js",
     "test": "karma start",
-    "watch": "yarn run build && electron ./dist/main.js"
+    "watch": "webpack --watch --config webpack.config.js"
   },
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "flux": "^3.1.3",
+    "material-ui": "^1.0.0-beta.43",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
