--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     volumes:
       - ./themes:/var/www/html/wp-content/themes
       - ./plugins:/var/www/html/wp-content/plugins
+      - ./uploads:/var/www/html/wp-content/uploads
   mysql:
     image: mysql:latest
     ports:
