--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@material-ui/icons": "^1.0.0-beta.43",
     "flux": "^3.1.3",
     "material-ui": "^1.0.0-beta.43",
+    "pdfjs-dist": "^2.0.489",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
@@ -23,6 +24,7 @@
     "@types/flux": "^3.1.7",
     "@types/jasmine": "^2.8.6",
     "@types/node": "^9.6.6",
+    "@types/pdfjs-dist": "^0.1.2",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
     "awesome-typescript-loader": "^5.0.0",
