--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "material-ui": "^1.0.0-beta.43",
     "pdfjs-dist": "^2.0.489",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "request": "^2.87.0"
   },
   "devDependencies": {
     "@types/electron": "^1.6.10",
@@ -27,6 +28,7 @@
     "@types/pdfjs-dist": "^0.1.2",
     "@types/react": "^16.3.12",
     "@types/react-dom": "^16.0.5",
+    "@types/request": "^2.47.0",
     "awesome-typescript-loader": "^5.0.0",
     "electron": "^1.8.4",
     "html-webpack-plugin": "^3.2.0",
