ログイン機能を実装中 (まだ途中)

--- a/client/CmsClient/packages.config
+++ b/client/CmsClient/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net461" />
   <package id="PdfiumViewer.Native.x86.v8-xfa" version="2018.4.8.256" targetFramework="net461" />
   <package id="PdfiumViewer.Native.x86_64.v8-xfa" version="2018.4.8.256" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
   <package id="WordPressPCL" version="1.4.2" targetFramework="net461" />
 </packages>
