フォルダー選択ダイアログでフォルダーを選択できるように変更

--- a/client/CmsClient/CmsClient.csproj
+++ b/client/CmsClient/CmsClient.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -91,6 +92,7 @@
     <Compile Include="Utils\NativeMethods.cs" />
     <Compile Include="ViewModels\InitialSettingViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\MediaFileListViewModel.cs" />
     <Compile Include="ViewModels\MediaFileViewModels.cs" />
     <Compile Include="ViewModels\SelectWatchDirectoryViewModel.cs" />
