--- a/client/CmsClient/packages.config
+++ b/client/CmsClient/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
+  <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net461" />
   <package id="PdfiumViewer.Native.x86.v8-xfa" version="2018.4.8.256" targetFramework="net461" />
